--- a/src/components/PiCoPilot.css
+++ b/src/components/PiCoPilot.css
@@ -152,9 +152,9 @@ h3 {
 }
 
 .message-avatar {
-  width: 32px;
-  height: 32px;
-  border-radius: 50%;
+  width: 36px;
+  height: 36px;
+
   object-fit: contain;
   margin-right: 0;
   flex-shrink: 0;
